fix contact relative positioning on mobile

--- a/assets/styles/layouts/contact.scss
+++ b/assets/styles/layouts/contact.scss
@@ -7,3 +7,11 @@
         padding-left: 0px;
     }
 }
+
+@media(max-width: 400px) {
+    .Contact {
+        ul {
+            top: 0px;
+        }
+    }
+}
